# just-show-up

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  debug_app.sh  docker-compose.ci.yml  docker-compose.debug.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  manage.py  production-start.sh  pyproject.toml  start.sh
.github/workflows/: test.yml
a_core/: celery.py  settings.py  urls.py
a_core/templatetags/: custom_filters.py
events/: crew.py  models.py  tasks.py  urls.py  utils.py  views.py
events/agentic/: flow.py  types.py  utils.py
events/agentic/tests/: test_agentic.py
events/agentic/tools/: custom_tool.py
events/crewai/: crew.py  types.py
events/crewai/tests/: test_crewai.py
events/crewai/tools/: custom_tool.py
events/migrations/: 0001_initial.py  0002_rename_url_event_detail_url_remove_event_tags_and_more.py  0003_remove_event_status_event_processing_state_and_more.py
events/templates/cotton/: card_event.html  event_list.html
node/: package-lock.json  package.json  tailwind.config.js
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
pages/templates/cotton/: card.html  counter.html
pages/templates/pages/: home.html
static/css/: style.css  style.min.css  tailwind.css
templates/: _base.html
templates/account/: base_entrance.html  email_confirm.html  login.html  logout.html  signup.html
templates/cotton/: footer.html  navbar.html  skeleton_wrapper.html
templates/layouts/: _auth.html  _default.html
tests/: test_dummy.py
